--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 	<body>
 		<h1>Hello, world!</h1>
 		<p>This is my <em>first</em> web page.</p>
+		<p>This is a change to test if github works</p>
 	</body>
 </html>
