--- a/index.html
+++ b/index.html
@@ -2,9 +2,14 @@
 <html>
 	<head>
 		<title>Hello, world!</title>
+		<link rel="stylesheet" href="reset.css" />
+		<link rel="stylesheet" href="style.css" />
 	</head>
 	<body>
-		<h1>Hello, world!</h1>
-		<p>This is my <em>first</em> web page.</p>
+		<h1>Project 2 Spread</h1>
+		<section>
+		<p>This is Spread project.</p>
+		<p>This is my html paragraph</p>
+	  	</section>
 	</body>
 </html>
