Added heading and section background color

--- a/index.html
+++ b/index.html
@@ -1,16 +1,26 @@
 <!doctype html>
 <html>
 	<head>
-		<title>Spread project</title>
+		<title>Spread</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="reset.css" />
 		<link rel="stylesheet" href="style.css" />
+		<style>
+			@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap');
+			</style>
 	</head>
+	<header>
+		<div id="maintitle">
+			<h1>Ronald McDonald Ollie Dos & Don’ts:</h1>
+			<h2>What Mascots Can<br> Teach Us About Branding</h2>
+		</div>
+		<div id="author">
+			<p>By Other Means</p>
+			<p>June 21st, 2017</p>
+		</div>
+		</header>
 	<body>
-		<h1>Project 2 Spread</h1>
 		<section>
-		<p>This is Spread project.</p>
-		<p>This is my html paragraph</p>
 	  	</section>
 </body>
-</html>
+</html> 
