Fixed the header for the mobile version

--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
 	<header>
 		<div id="maintitle">
 			<h1>Ronald McDonald Ollie Dos & Don’ts:</h1>
-			<h2>What Mascots Can<br> Teach Us About Branding</h2>
+			<h2>What Mascots Can Teach Us About Branding</h2>
 		</div>
-		<div id="author">
+		<div class="author">
 			<p>By Other Means</p>
 			<p>June 21st, 2017</p>
 		</div>
 		</header>
 	<body>
-		<section>
-	  	</section>
+
 </body>
 </html> 
