--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 		<link rel="stylesheet" href="style.css" />
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap');
+			@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap');
+
 			</style>
 	</head>
 	<header>
