Edited the div section with class "author" and changed the size of h3

--- a/index.html
+++ b/index.html
@@ -8,17 +8,16 @@
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap');
 			@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap');
-
-			</style>
+		</style>
 	</head>
 	<header>
-		<div id="maintitle">
+		<div>
 			<h1>Ronald McDonald Ollie Dos & Don’ts:</h1>
 			<h2>What Mascots Can Teach Us About Branding</h2>
 		</div>
 		<div class="author">
 			<p>By Other Means</p>
-			<p>June 21st, 2017</p>
+			<time>June 21st, 2017</time>
 		</div>
 		</header>
 	<body>
@@ -45,7 +44,7 @@
 			</section>
 
 			<section>
-			<h3>We Don’t Cut Corners When it Comes to Quality</h3>>
+			<h3>We Don’t Cut Corners When it Comes to Quality</h3>
 
 			<p>Style guides are relics from a time when corporate design programs (as they were called before they were known as “brands”) were dictated by oversized binders full of type specimens, colors, and grids meant for typesetters, printers, and sign makers to help ensure quality. They seem unnecessary now that implementation is handled by trained designers working with software that makes achieving consistency as easy as applying style sheets and master pages, or copying and pasting.</p>
 
