Added accent red color to the title

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	<header>
 		<div>
 			<h1>Ronald McDonald Ollie Dos & Don’ts:</h1>
-			<h2>What Mascots Can Teach Us About Branding</h2>
+			<h2>What Mascots Can Teach Us About <span id="redtext">Branding</span></h2>
 		</div>
 		<div class="author">
 			<p>By Other Means</p>
