added comments to our code

--- a/index.html
+++ b/index.html
@@ -2,9 +2,13 @@
 <html>
 	<head>
 		<title>Spread</title>
+		<!--Below is a meta element that tells the browser to render it at its actual size-->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<!--A link to our reset file-->
 		<link rel="stylesheet" href="reset.css" />
+		<!--A link to our style file-->
 		<link rel="stylesheet" href="style.css" />
+		<!--Imported two typefaces from Google Fonts-->
 		<style>
 			@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap');
 			@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap');
@@ -21,6 +25,7 @@
 		</div>
 		</header>
 	<body>
+		<!--Below is the article-->
 		<article>
 			<section>
 			<h3>For The Rest Of Your Life</h3>
