--- a/index.html
+++ b/index.html
@@ -15,6 +15,13 @@
 		</style>
 	</head>
 	<header>
+		<div class="navigation">
+			<a href="#rest">Rest</a> 
+			<a href="#snoopy">Snoopy</a>
+			<a href="#quality">Quality</a>
+			<a href="#sample">Sample</a>
+			<a href="#lovin">Lovin</a>
+		</div>
 		<div>
 			<h1>Ronald McDonald Ollie Dos & Don’ts:</h1>
 			<h2>What Mascots Can Teach Us About <span id="redtext">Branding</span></h2>
@@ -27,7 +34,7 @@
 	<body>
 		<!--Below is the article-->
 		<article>
-			<section>
+			<section id="rest">
 			<h3>For The Rest Of Your Life</h3>
 			<p>In the summer of 2007, a well-rested man wearing pajamas and a nightcap shaved off his mustache and reintroduced himself to the world. This image shift was likely the decision of market studies predicting that a younger-looking man would sell more mattresses, or, that in post-9/11 New York, his ambiguous ethnicity was bad for business. This is quintessential branding. When a corporation feels the need to adapt to societal shifts, align with new trends, or recover from a scandal, the easiest thing to do is put on a new face.</p>
 
@@ -41,14 +48,14 @@
 			<p>These designers applied the same modernist approach to everything,<sup style="vertical-align: super;">3</sup> reducing form to make simple logos, and rational systems for organizing information, to give the appearance of efficiency despite the complicated mechanisms working behind the scenes. Branding agencies have taken this reductive approach even further, simplifying entire organizational structures to catchy slogans and “brand essence” statements. In both cases design obscures complexity. This is a welcome sales tool for a corporation selling goods and services, but for institutions it prevents people from entering into a necessary state of confusion that encourages inquiry and dialogue.</p>
 
 			</section>
-			<section>
+			<section id="snoopy">
 			<h3>There is Only One Snoopy</h3>
 			<p>Snoopy was recently let go as MetLife’s brand ambassador after thirty years making the obscure world of insurance more approachable. He appeared on everything from their blimp to their stationery, and a style guide existed to ensure proper implementation. In it, there was a diagram for how to give Snoopy his personal space using his foot as a unit of measurement, and a “do’s and don’ts” section with rules like “Snoopy cannot interact with himself. There is only one Snoopy”; “Snoopy cannot speak, i.e. no bubbles with words”; and “Do not depict [Snoopy] with alcoholic beverages. Snoopy likes root beer” that reminded the staff that Snoopy brought his own personality to MetLife.</p>
 
 			<p>Corporate mascots have personalities that, although exaggerated for effect, have the ability to evolve in ways a style guide could never predict. Despite the fact that most of these changes are the result of pandering to new customers—Ronald McDonald loses weight and takes up skateboarding, Mr. Peanut puts on a vest and starts talking like a celebrity, the Verizon guy switches to Sprint—in their ability to adapt to new situations while maintaining their identity, mascots come closer to representing the complexities of an organization than any so-called flexible brand identity ever could. In this way, they provide an alternative to the prevailing obsession with top-down branding systems, created by agencies who are brought in to do design thinking but don’t stick around for their application. That work is left to the designers tasked with building the identity with a logo, a few fonts, vague strategies, and a style guide telling them what not to do.<sup style="vertical-align: super;">5</sup></p>
 			</section>
 
-			<section>
+			<section id="quality">
 			<h3>We Don’t Cut Corners When it Comes to Quality</h3>
 
 			<p>Style guides are relics from a time when corporate design programs (as they were called before they were known as “brands”) were dictated by oversized binders full of type specimens, colors, and grids meant for typesetters, printers, and sign makers to help ensure quality. They seem unnecessary now that implementation is handled by trained designers working with software that makes achieving consistency as easy as applying style sheets and master pages, or copying and pasting.</p>
@@ -56,7 +63,7 @@
 			<p>The fetishization of these manuals—seen in the recent crowdfunded reprints of the New York City Transit Authority, U.S. Bicentennial, NASA, EPA, and British Rail guidelines—is evidence of a misguided belief that graphic design is a problem-solving profession with the ability to create stability in a world where answers are increasingly hard to come by. Truth is slippery, identity is fluid, and traditional social and professional hierarchies are being challenged. But designers can find comfort in high-priced, luxury versions of yesterday’s industrial production manuals, while the publishers reissuing them capitalize on something never meant to be sold in the first place.</p>
 			</section>
 
-			<section>
+			<section id="sample">
 			<h3>Sample Applications</h3>
 
 			<p>If you’ve ever worked on or with a style guide, you probably know how little time goes into them. In one case, we received guidelines from the Museum of Arts and Design (MAD) that had two words on the cover other than the museum and design agency’s names. One of those words was misspelled, and that word was “identity.”</p>
@@ -74,8 +81,8 @@
 			<p>ICA Philadelphia has a dynamic exhibition and program schedule. Since we’ve been working with them, the number of exhibitions has been different each season, the issues they address are constantly expanding, and the curators are always finding new ways to present work—especially performance-based work—in the museum, challenging how the building functions and forcing the design to constantly adapt to new situations. As a result, our approach and the visual identity has evolved each season, but always in response to what came before: either to build continuity or signal a bigger change. What has remained constant is the typeface, the logos, and a consistent way of working closely with the institution. There is a visual coherence and a recognizable identity and voice, but no firm rules that we’d be able to dictate through a style guide.</p>
 			</section>
 
-			<section>
-			<h3>I’m loving it</h3>
+			<section id="lovin">
+			<h3>I’m lovin' it</h3>
 
 			<p>The alternative to a corporate, style-guide driven approach to branding is developing a visual language over time. This is a bottom-up vs. top-down approach, or what philosopher Gilbert Ryle describes as the difference between “knowing how” and “knowing that,” which Keller Easterling has used to explain a dispositional approach to design that unfolds over time<sup style="vertical-align: super;">6</sup>:</p>
 
