added z-index position on the navigation

--- a/index.html
+++ b/index.html
@@ -14,15 +14,15 @@
 			@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&display=swap');
 		</style>
 	</head>
+	<div class="navigation">
+		<a href="#rest">Rest</a> 
+		<a href="#snoopy">Snoopy</a>
+		<a href="#quality">Quality</a>
+		<a href="#sample">Sample</a>
+		<a href="#lovin">Lovin</a>
+	</div>
 	<header>
-		<div class="navigation">
-			<a href="#rest">Rest</a> 
-			<a href="#snoopy">Snoopy</a>
-			<a href="#quality">Quality</a>
-			<a href="#sample">Sample</a>
-			<a href="#lovin">Lovin</a>
-		</div>
-		<div>
+		<div class="title">
 			<h1>Ronald McDonald Ollie Dos & Don’ts:</h1>
 			<h2>What Mascots Can Teach Us About <span id="redtext">Branding</span></h2>
 		</div>
