Fixed the navigation bar and added an arrow to the top

--- a/index.html
+++ b/index.html
@@ -20,9 +20,10 @@
 		<li><a href="#quality">Quality</a></li>
 		<li><a href="#sample">Sample</a></li>
 		<li><a href="#lovin">Lovin</a></li>
+		<li><a href="#title" id="arrow">&#8593;</a></li>
 	</ul>
 	<header>
-		<div class="title">
+		<div id="title">
 			<h1>Ronald McDonald Ollie Dos & Don’ts:</h1>
 			<h2>What Mascots Can Teach Us About <span id="redtext">Branding</span></h2>
 		</div>
@@ -45,10 +46,10 @@
 
 			<p>Graphic design grew alongside industry, first as a tool for advertising, then as a way for corporations to control visual consistency and appear trustworthy to the public. Throughout all of this, many designers managed to stay connected to the arts which was, after all, the foundation of their profession. The term graphic design may have replaced commercial art but the oxymoron persists in practice, and looking at a sample of work by some of the most celebrated early designers we see equal representation from both sides: Paul Rand worked for Coronet Brandy and designed The Documents of Modern Art publication series; Wim Crouwel designed an identity system for the Dutch financial institution Rabobank while working with the Stedelijk Museum; and Chermayeff and Geismar designed logos for the Massachusetts Bay Transportation Authority and The Museum of Modern Art.</p>
 
-			<p>These designers applied the same modernist approach to everything,<sup style="vertical-align: super;">3</sup> reducing form to make simple logos, and rational systems for organizing information, to give the appearance of efficiency despite the complicated mechanisms working behind the scenes. Branding agencies have taken this reductive approach even further, simplifying entire organizational structures to catchy slogans and “brand essence” statements. In both cases design obscures complexity. This is a welcome sales tool for a corporation selling goods and services, but for institutions it prevents people from entering into a necessary state of confusion that encourages inquiry and dialogue.</p>
+			<p>These designers applied the same modernist approach to everything,<sup style="vertical-align: super;">3</sup> reducing form to make simple logos, and rational systems for organizing information, to give the appearance of efficiency despite the complicated mechanisms working behind the scenes. Branding agencies have taken this reductive approach even further, simplifying entire organizational structures to catchy slogans and “brand essence” statements. In both cases design obscures complexity. This is a welcome sales tool for a <span id="snoopy">corporation selling goods and services,</span> but for institutions it prevents people from entering into a necessary state of confusion encourages inquiry and dialogue. </p>
 
 			</section>
-			<section id="snoopy">
+			<section>
 			<h3>There is Only One Snoopy</h3>
 			<p>Snoopy was recently let go as MetLife’s brand ambassador after thirty years making the obscure world of insurance more approachable. He appeared on everything from their blimp to their stationery, and a style guide existed to ensure proper implementation. In it, there was a diagram for how to give Snoopy his personal space using his foot as a unit of measurement, and a “do’s and don’ts” section with rules like “Snoopy cannot interact with himself. There is only one Snoopy”; “Snoopy cannot speak, i.e. no bubbles with words”; and “Do not depict [Snoopy] with alcoholic beverages. Snoopy likes root beer” that reminded the staff that Snoopy brought his own personality to MetLife.</p>
 
