fixed the link of the navigation for the button "rest"

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		</style>
 	</head>
 	<ul>
-		<li><a href="#rest">Rest</a> </li>
+		<li><a href="#time">Rest</a> </li>
 		<li><a href="#snoopy">Snoopy</a></li>
 		<li><a href="#quality">Quality</a></li>
 		<li><a href="#sample">Sample</a></li>
@@ -29,7 +29,7 @@
 		</div>
 		<div class="author">
 			<p>By Other Means</p>
-			<time>June 21st, 2017</time>
+			<time span id="time">June 21st, 2017</time>
 		</div>
 		</header>
 	<body>
