--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
 			<p>The agencies and design consultancies that do this work make no distinction between America Online and the New Museum, Popeyes Louisiana Kitchen and the Philadelphia Museum of Art, Target and The Met, Citibank and MoMA, or Unilever and the Tate. For them, “Culture” is just another category<sup style="vertical-align: super;">2</sup> in their portfolios next to Finance, Energy, Hospitality, and Technology.</p>
 
-			<p class="bigtext">Graphic design grew alongside industry, first as a tool for advertising, then as a way for corporations to control visual consistency and appear trustworthy to the public.</p>
+			<p class="bigtext">Graphic design grew alongside industry, first as a tool for advertising, then as a way for corporations to control visual consistency and <mark>appear trustworthy to the public</mark>.</p>
 			 <p>Throughout all of this, many designers managed to stay connected to the arts which was, after all, the foundation of their profession. The term graphic design may have replaced commercial art but the oxymoron persists in practice, and looking at a sample of work by some of the most celebrated early designers we see equal representation from both sides: Paul Rand worked for Coronet Brandy and designed The Documents of Modern Art publication series; Wim Crouwel designed an identity system for the Dutch financial institution Rabobank while working with the Stedelijk Museum; and Chermayeff and Geismar designed logos for the Massachusetts Bay Transportation Authority and The Museum of Modern Art.</p>
 
 			<p>These designers applied the same modernist approach to everything,<sup style="vertical-align: super;">3</sup> reducing form to make simple logos, and rational systems for organizing information, to give the appearance of efficiency despite the complicated mechanisms working behind the scenes. Branding agencies have taken this reductive approach even further, simplifying entire organizational structures to catchy slogans and “brand essence” statements.</p>
@@ -68,7 +68,7 @@
 			<p>Style guides are relics from a time when corporate design programs (as they were called before they were known as “brands”) were dictated by oversized binders full of type specimens, colors, and grids meant for typesetters, printers, and sign makers to help ensure quality. They seem unnecessary now that implementation is handled by trained designers working with software that makes achieving consistency as easy as applying style sheets and master pages, or copying and pasting.</p>
 
 			<p>The fetishization of these manuals—seen in the recent crowdfunded reprints of the New York City Transit Authority, U.S. Bicentennial, NASA, EPA, and British Rail guidelines—is evidence of a misguided belief that graphic design is a problem-solving profession with the ability to create stability in a world where answers are increasingly hard to come by.</p>
-			<p class="bigtext"><mark>Truth is slippery, identity is fluid, and traditional social and professional hierarchies are being challenged</mark>. But designers can find comfort in high-priced, luxury versions of yesterday’s industrial production manuals, while the publishers reissuing them capitalize on something never meant to be sold in the first place.</p>
+			<p class="bigtext">Truth is slippery, <mark>identity is fluid</mark>, and traditional social and professional hierarchies are being challenged. But designers can find comfort in high-priced, luxury versions of yesterday’s industrial production manuals, while the publishers reissuing them capitalize on something never meant to be sold in the first place.</p>
 			</section>
 
 			<section id="sample">
@@ -103,5 +103,6 @@
 			</section>
 
 		  </article>
+		  <footer>Web design by Bee & Yaxuan. 2024</footer>
 </body>
 </html> 
