added the citation texts and edited the padding, margin

--- a/index.html
+++ b/index.html
@@ -43,14 +43,17 @@
 			<p class="bigtext">When a corporation feels the need to adapt to societal shifts, align with new trends, or recover from a scandal, the easiest thing to do is <mark>put on a new face.</mark></p>
 
 			<p>Since the early 2000s there has been a near total embrace of branding by museums, performing arts institutions, and public art organizations. Wally Olins saw this coming, writing in his 2004 book On Brand that after conquering nation-states and cities, branding was moving into the “complex web of organizations principally defined by the fact that they do not exist to make a profit.”<sup style="vertical-align: super;">1</sup></p>
+			<p class="citation">1. Wally Olins, On Brand (Thames and Hudson, 2004), p. 239.</p>
 			
 
 			<p>The agencies and design consultancies that do this work make no distinction between America Online and the New Museum, Popeyes Louisiana Kitchen and the Philadelphia Museum of Art, Target and The Met, Citibank and MoMA, or Unilever and the Tate. For them, “Culture” is just another category<sup style="vertical-align: super;">2</sup> in their portfolios next to Finance, Energy, Hospitality, and Technology.</p>
+			<p class="citation">2. Base: Apparel, Architecture, Banking, Cities, Corporate, Culture, Events, Fashion, Food, Hospitality, Lifestyle, Luxury, Real Estate, Transports.</p>
 
 			<p class="bigtext">Graphic design grew alongside industry, first as a tool for advertising, then as a way for corporations to control visual consistency and <mark>appear trustworthy to the public</mark>.</p>
 			 <p>Throughout all of this, many designers managed to stay connected to the arts which was, after all, the foundation of their profession. The term graphic design may have replaced commercial art but the oxymoron persists in practice, and looking at a sample of work by some of the most celebrated early designers we see equal representation from both sides: Paul Rand worked for Coronet Brandy and designed The Documents of Modern Art publication series; Wim Crouwel designed an identity system for the Dutch financial institution Rabobank while working with the Stedelijk Museum; and Chermayeff and Geismar designed logos for the Massachusetts Bay Transportation Authority and The Museum of Modern Art.</p>
 
 			<p>These designers applied the same modernist approach to everything,<sup style="vertical-align: super;">3</sup> reducing form to make simple logos, and rational systems for organizing information, to give the appearance of efficiency despite the complicated mechanisms working behind the scenes. Branding agencies have taken this reductive approach even further, simplifying entire organizational structures to catchy slogans and “brand essence” statements.</p>
+			<p class="citation">3. Chermayeff & Geismar are perhaps the most prominent example of this relationship. Over sixty years they have applied the same approach to designing logos for the Museum of Modern Art in New York, the Smithsonian, the Toledo Museum of Art, the Museum of Contemporary Art in Los Angeles, the Katonah Museum of Art in Westchester New York, and Mobil, Chase Bank, Merck Pharmaceuticals, and Time Warner. Chermayeff & Geismar.</p>
 			<p class="bigtext">In both cases <mark>design obscures complexity</mark>. This is a welcome sales tool for a <span id="snoopy">corporation selling goods and services,</span> but for institutions it prevents people from entering into a necessary state of confusion encourages inquiry and dialogue. </p>
 
 			</section>
@@ -60,6 +63,7 @@
 
 			<p class="bigtext">Corporate mascots have personalities that, although exaggerated for effect, have the ability to <mark>evolve in ways a style guide could never predict.</mark></p> 
 			<p>Despite the fact that most of these changes are the result of pandering to new customers—Ronald McDonald loses weight and takes up skateboarding, Mr. Peanut puts on a vest and starts talking like a celebrity, the Verizon guy switches to Sprint—in their ability to adapt to new situations while maintaining their identity, mascots come closer to representing the complexities of an organization than any so-called flexible brand identity ever could. In this way, they provide an alternative to the prevailing obsession with top-down branding systems, created by agencies who are brought in to do design thinking but don’t stick around for their application. That work is left to the designers tasked with building the identity with a logo, a few fonts, vague strategies, and a style guide telling them what not to do.<sup style="vertical-align: super;">5</sup></p>
+			<p class="citation">5. The act of writing a “don’ts” section for a style guide is a weird form of speculation that requires an agency to embody the mind of their “other”—some designer they deem to have less ability or worse taste than them. All the things they would never do are conjured up in order to prevent someone else from doing them. These value judgements keep a visual identity stuck in the time it was made, preventing it from growing as tastes change and missions evolve. No institution would aspire to such a level of stagnation, so why should their “brands” be designed to do that from the start?</p>
 			</section>
 
 			<section id="quality">
@@ -94,6 +98,7 @@
 			<h3>I’m lovin' it</h3>
 
 			<p>The alternative to a corporate, style-guide driven approach to branding is developing a visual language over time. This is a bottom-up vs. top-down approach, or what philosopher Gilbert Ryle describes as the difference between “knowing how” and “knowing that,” which Keller Easterling has used to explain a dispositional approach to design that unfolds over time<sup style="vertical-align: super;">6</sup>:</p>
+			<p class="citation">6. Keller Easterling, Extrastatecraft: The Power of Infrastructure Space, 2014.</p>
 
 			<p class="bigtextitalic">Ryle once explained the difference between the two by using the example of a clown. The clown does not possess the correct answer to the question, “What is funny?” The clown’s antics are not a single reasoned executive order. His knowledge and experience unfold in relation to the situation, from encounter to encounter, circumstance to circumstance. He has well-rehearsed knowledge of how to do a pratfall, exaggerate his facial expressions, modulate his voice, or introduce any other gag from his bag of tricks. What is funny involves a set of choices contingent on the audience’s reactions, and the clown’s performance relies on “knowing how” rather than “knowing that.”</p>
 
