Added a link to the original article

--- a/index.html
+++ b/index.html
@@ -107,6 +107,8 @@
 			<p>Like clowns that know how to be funny, and mascots with personalities that evolve naturally over time, institutions should partner with independent designers, design studios, and build strong in-house teams. These long-term collaborations can replace large branding agencies, and develop truly adaptive, flexible visual identities that accurately reflect the necessary complexities of cultural institutions.</p>
 			</section>
 
+			<a href="https://walkerart.org/magazine/for-the-rest-of-your-life" id="originalarticle">Click here to read the original article &#8599;</a>
+
 		  </article>
 		  <footer>Web design by Bee & Yaxuan. 2024</footer>
 </body>
