Changed the navigation link to a div

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
 			@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Libre+Franklin:ital,wght@0,100..900;1,100..900&family=Public+Sans:ital,wght@0,100..900;1,100..900&display=swap');
 		</style>
 	</head>
-	<ul>
-		<li><a href="#time">Rest</a> </li>
-		<li><a href="#snoopy">Snoopy</a></li>
-		<li><a href="#quality">Quality</a></li>
-		<li><a href="#sample">Sample</a></li>
-		<li><a href="#lovin">Lovin</a></li>
-		<li><a href="#title" id="arrow">&#8593;</a></li>
-	</ul>
+	<div class="flex-container">
+		<a href="#time">Rest</a>
+		<a href="#snoopy">Snoopy</a>
+		<a href="#quality">Quality</a>
+		<a href="#sample">Sample</a>
+		<a href="#lovin">Lovin</a>
+		<a href="#title" id="arrow">&#8593;</a>
+</div>
 	<header>
 		<div id="title">
 			<h1>Ronald McDonald Ollie Dos & Don’ts:</h1>
