--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 		<a href="#quality">Quality</a>
 		<a href="#sample">Sample</a>
 		<a href="#lovin">Lovin</a>
-		<a href="#title" id="arrow">&#8593;</a>
+		<a href="#start" id="arrow">&#8593;</a>
 </div>
 <div class="mainheader">
 	<header>
 		<div class="title">
-			<h1>Ronald McDonald Ollie Dos & Don’ts:</h1>
+			<h1 id="start">Ronald McDonald Ollie Dos & Don’ts:</h1>
 			<h2>What Mascots Can Teach Us About <span id="redtext">Branding</span></h2>
 		</div>
 		<div class="author">
@@ -62,15 +62,15 @@
 					<p class="bigtext">Corporate mascots have personalities that, although exaggerated for effect, have the ability to <mark>evolve in ways a style guide could never predict.</mark></p> 
 					<section class="citationbox">
 					<p class="citationparagraph">Despite the fact that most of these changes are the result of pandering to new customers—Ronald McDonald loses weight and takes up skateboarding, Mr. Peanut puts on a vest and starts talking like a celebrity, the Verizon guy switches to Sprint—in their ability to adapt to new situations while maintaining their identity, mascots come closer to representing the complexities of an organization than any so-called flexible brand identity ever could. In this way, they provide an alternative to the prevailing obsession with top-down branding systems, created by agencies who are brought in to do design thinking but don’t stick around for their application. That work is left to the designers tasked with building the identity with a logo, a few fonts, vague strategies, and a style guide telling them what not to do.<sup style="vertical-align: super;">5</sup></p>
-						<p class="citation">5. The act of writing a “don’ts” section for a style guide is a weird form of speculation that requires an agency to embody the mind of their “other”—some designer they deem to have less ability or worse taste than them. All the things they would never do are conjured up in order to prevent someone else from doing them. These value judgements keep a visual identity stuck in the time it was made, preventing it from growing as tastes change and missions evolve. No institution would aspire to such a level of stagnation, so why should their “brands” be designed to do that from the start?</p> </section>
+						<p class="citation">5. The act of writing a “don’ts” section for a style guide is a weird form of speculation that requires an agency to embody the mind of their “other”—some designer they deem to have less ability or worse taste than them. All the things they would never do are conjured up in order to prevent someone else from doing them. These value judgements keep a visual identity stuck in the time it was made, preventing it from growing as tastes change and missions evolve. No institution would aspire to such a <span id="quality"> of stagnation, so why should their “brands” be designed to do that from the start?</p></span></section>
 			</section>
-			<section id="quality">
+			<section>
 				<h3>We Don’t Cut Corners When it Comes to Quality</h3>
 					<p class="normal">Style guides are relics from a time when corporate design programs (as they were called before they were known as “brands”) were dictated by oversized binders full of type specimens, colors, and grids meant for typesetters, printers, and sign makers to help ensure quality. They seem unnecessary now that implementation is handled by trained designers working with software that makes achieving consistency as easy as applying style sheets and master pages, or copying and pasting.</p>
 					<p class="normal">The fetishization of these manuals—seen in the recent crowdfunded reprints of the New York City Transit Authority, U.S. Bicentennial, NASA, EPA, and British Rail guidelines—is evidence of a misguided belief that graphic design is a problem-solving profession with the ability to create stability in a world where answers are increasingly hard to come by.</p>
-					<p class="bigtext">Truth is slippery, <mark>identity is fluid</mark>, and traditional social and professional hierarchies are being challenged. But designers can find comfort in high-priced, luxury versions of yesterday’s industrial production manuals, while the publishers reissuing them capitalize on something never meant to be sold in the first place.</p>
+					<p class="bigtext">Truth is slippery, <mark>identity is fluid</mark>, and traditional social and professional hierarchies are being challenged. But designers can find comfort in high-priced, luxury versions of yesterday’s industrial production manuals, while the publishers <span id="sample"> them capitalize on something never meant to be sold in the first place.</span></p>
 			</section>
-			<section id="sample">
+			<section>
 				<h3>Sample Applications</h3>
 					<p class="normal">If you’ve ever worked on or with a style guide, you probably know how little time goes into them. In one case, we received guidelines from the Museum of Arts and Design (MAD) that had two words on the cover other than the museum and design agency’s names. One of those words was misspelled, and that word was “identity.”</p>
 					<p class="normal">At that time, MAD was working with an independent designer on institutional materials that adhered to Pentagram’s guidelines, while the curator of public programs brought in other studios to work specifically on his projects. Because many of these programs were drastically different from MAD’s typical exhibitions it made sense to work outside their identity. But even if there was a desire to work within it, Pentagram’s system relied on a custom typeface that was so specific it left no room for the content to speak for itself. Perhaps it was appropriate for a design museum to be so heavily branded, but this approach didn’t work for more experimental programs, therefore the identity wasn’t capable of growing with the institution.</p>
@@ -79,9 +79,9 @@
 					<p class="normal">In 2013, we started working with the Institute of Contemporary Art at the University of Pennsylvania (ICA Philadelphia). The project was initially a redesign of their website in order to celebrate their fiftieth anniversary and develop a new way to display and connect their archive. It expanded into a larger institutional redesign due to the need for a consistent visual language that would work across the website, print materials, exhibition graphics, and exterior signage and banners. ICA had never worked from a style guide with their previous visual identities, and were interested in having one at the end of our collaboration. We were, too, but recommended treating it as an evolving document—something that could be revised after we spent some time working with the identity.</p>
 					<p class="normal">We produced a document that summarized our initial idea and worked from it for a few seasons. It was a fairly simple system of threes meant to flatten typographic hierarchies: three-column grid, three type sizes, and an approach to positioning information in asymmetric “constellations” the spread across the page. This was based on the three letters in I-C-A and their alignment in the logotype, a response to the positioning of galleries in their building and how visitors moved through them.</p>
 					<p class="normal">ICA Philadelphia has a dynamic exhibition and program schedule. Since we’ve been working with them, the number of exhibitions has been different each season, the issues they address are constantly expanding, and the curators are always finding new ways to present work—especially performance-based work—in the museum, challenging how the building functions and forcing the design to constantly adapt to new situations. As a result, our approach and the visual identity has evolved each season, but always in response to what came before: either to build continuity or signal a bigger change.</p>
-					<p class="bigtext">What has remained constant is the typeface, the logos, and a consistent way of working closely with the institution. There is a visual coherence and a recognizable identity and voice, but no firm rules that we’d be able to dictate through a style guide.</p>
+					<p class="bigtext">What has remained constant is the typeface, the logos, and a consistent way of working closely with the institution. There is a <span id="lovin"> coherence and a recognizable identity and voice, but no firm rules that we’d be able to dictate through a style guide.</span></p>
 			</section>
-			<section id="lovin">
+			<section>
 				<h3>I’m lovin' it</h3>
 					<section class="citationbox">
 					<p class="citationparagraph">The alternative to a corporate, style-guide driven approach to branding is developing a visual language over time. This is a bottom-up vs. top-down approach, or what philosopher Gilbert Ryle describes as the difference between “knowing how” and “knowing that,” which Keller Easterling has used to explain a dispositional approach to design that unfolds over time<sup style="vertical-align: super;">6</sup>:</p>
