--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 	</head>
 	<!--Below is the navigation bar links-->
 	<div class="flex-container">
-		<a href="#time">Rest</a>
-		<a href="#snoopy">Snoopy</a>
-		<a href="#quality">Quality</a>
-		<a href="#sample">Sample</a>
-		<a href="#lovin">Lovin</a>
+		<a href="#time"><button>Rest</button></a>
+		<a href="#snoopy"><button>Snoopy</button></a>
+		<a href="#quality"><button>Quality</button></a>
+		<a href="#sample"><button>Sample</button></a>
+		<a href="#lovin"><button>Lovin</button></a>
 		<a href="#start" id="arrow">&#8593;</a>
 </div>
 	<header>
@@ -41,26 +41,27 @@
 				<h3>For The Rest Of Your Life</h3>
 					<p class="normal">In the summer of 2007, a well-rested man wearing pajamas and a nightcap shaved off his mustache and reintroduced himself to the world. This image shift was likely the decision of market studies predicting that a younger-looking man would sell more mattresses, or, that in post-9/11 New York, his ambiguous ethnicity was bad for business. This is quintessential branding. 
 					<p class="bigtext">When a corporation feels the need to adapt to societal shifts, align with new trends, or recover from a scandal, the easiest thing to do is <mark>put on a new face.</mark></p>
-					<section class="citationbox">
+					<div class="citationbox">
 					<p class="citationparagraph">Since the early 2000s there has been a near total embrace of branding by museums, performing arts institutions, and public art organizations. Wally Olins saw this coming, writing in his 2004 book On Brand that after conquering nation-states and cities, branding was moving into the “complex web of organizations principally defined by the fact that they do not exist to make a profit.”<sup style="vertical-align: super;">1</sup></p>
-						<p class="citation">1. Wally Olins, On Brand (Thames and Hudson, 2004), p. 239.</p> </section>
-					<section class="citationbox">
+						<p class="citation">1. Wally Olins, On Brand (Thames and Hudson, 2004), p. 239.</p> </div>
+					<div class="citationbox">
 					<p class="citationparagraph">The agencies and design consultancies that do this work make no distinction between America Online and the New Museum, Popeyes Louisiana Kitchen and the Philadelphia Museum of Art, Target and The Met, Citibank and MoMA, or Unilever and the Tate. For them, “Culture” is just another category<sup style="vertical-align: super;">2</sup> in their portfolios next to Finance, Energy, Hospitality, and Technology.</p>
-						<p class="citation">2. Base: Apparel, Architecture, Banking, Cities, Corporate, Culture, Events, Fashion, Food, Hospitality, Lifestyle, Luxury, Real Estate, Transports.</p> </section>
+						<p class="citation">2. Base: Apparel, Architecture, Banking, Cities, Corporate, Culture, Events, Fashion, Food, Hospitality, Lifestyle, Luxury, Real Estate, Transports.</p> </div>
 					<p class="bigtext">Graphic design grew alongside industry, first as a tool for advertising, then as a way for corporations to control visual consistency and appear <mark>trustworthy to the public</mark>.</p>
 			 		<p class="normal">Throughout all of this, many designers managed to stay connected to the arts which was, after all, the foundation of their profession. The term graphic design may have replaced commercial art but the oxymoron persists in practice, and looking at a sample of work by some of the most celebrated early designers we see equal representation from both sides: Paul Rand worked for Coronet Brandy and designed The Documents of Modern Art publication series; Wim Crouwel designed an identity system for the Dutch financial institution Rabobank while working with the Stedelijk Museum; and Chermayeff and Geismar designed logos for the Massachusetts Bay Transportation Authority and The Museum of Modern Art.</p>
-					<section class="citationbox">
-					<p class="citationparagraph">These designers applied the same modernist approach to everything,<sup style="vertical-align: super;">3</sup> reducing form to make simple logos, and rational systems for organizing information, to give the appearance of efficiency despite the complicated mechanisms working behind the scenes. Branding agencies have taken this reductive approach even further, simplifying entire organizational structures to catchy slogans and “brand essence” statements.</p>
+					<div class="citationbox">
+					<div><p class="citationparagraph">These designers applied the same modernist approach to everything,<sup style="vertical-align: super;">3</sup> reducing form to make simple logos, and rational systems for organizing information, to give the appearance of efficiency despite the complicated mechanisms working behind the scenes. Branding agencies have taken this reductive approach even further, simplifying entire organizational structures to catchy slogans and “brand essence” statements.</p>
+					<p class="bigtext2">In both cases <mark>design obscures complexity</mark>. This is a welcome sales tool for a <span id="snoopy">corporation selling goods and services,</span> but for institutions it prevents people from entering into a necessary state of confusion encourages inquiry and dialogue.</p></div>
 						<p class="citation">3. Chermayeff & Geismar are perhaps the most prominent example of this relationship. Over sixty years they have applied the same approach to designing logos for the Museum of Modern Art in New York, the Smithsonian, the Toledo Museum of Art, the Museum of Contemporary Art in Los Angeles, the Katonah Museum of Art in Westchester New York, and Mobil, Chase Bank, Merck Pharmaceuticals, and Time Warner. Chermayeff & Geismar.</p></section>
-					<p class="bigtext">In both cases <mark>design obscures complexity</mark>. This is a welcome sales tool for a <span id="snoopy">corporation selling goods and services,</span> but for institutions it prevents people from entering into a necessary state of confusion encourages inquiry and dialogue. </p>
+					
 			</section>
 			<section>
 				<h3>There is Only One Snoopy</h3>
 					<p class="normal">Snoopy was recently let go as MetLife’s brand ambassador after thirty years making the obscure world of insurance more approachable. He appeared on everything from their blimp to their stationery, and a style guide existed to ensure proper implementation. In it, there was a diagram for how to give Snoopy his personal space using his foot as a unit of measurement, and a “do’s and don’ts” section with rules like “Snoopy cannot interact with himself. There is only one Snoopy”; “Snoopy cannot speak, i.e. no bubbles with words”; and “Do not depict [Snoopy] with alcoholic beverages. Snoopy likes root beer” that reminded the staff that Snoopy brought his own personality to MetLife.</p>
 					<p class="bigtext">Corporate mascots have personalities that, although exaggerated for effect, have the ability to <mark>evolve in ways a style guide could never predict.</mark></p> 
-					<section class="citationbox">
+					<div class="citationbox">
 					<p class="citationparagraph">Despite the fact that most of these changes are the result of pandering to new customers—Ronald McDonald loses weight and takes up skateboarding, Mr. Peanut puts on a vest and starts talking like a celebrity, the Verizon guy switches to Sprint—in their ability to adapt to new situations while maintaining their identity, mascots come closer to representing the complexities of an organization than any so-called flexible brand identity ever could. In this way, they provide an alternative to the prevailing obsession with top-down branding systems, created by agencies who are brought in to do design thinking but don’t stick around for their application. That work is left to the designers tasked with building the identity with a logo, a few fonts, vague strategies, and a style guide telling them what not to do.<sup style="vertical-align: super;">5</sup></p>
-						<p class="citation">5. The act of writing a “don’ts” section for a style guide is a weird form of speculation that requires an agency to embody the mind of their “other”—some designer they deem to have less ability or worse taste than them. All the things they would never do are conjured up in order to prevent someone else from doing them. These value judgements keep a visual identity stuck in the time it was made, preventing it from growing as tastes change and missions evolve. No institution would aspire to such a <span id="quality"> of stagnation, so why should their “brands” be designed to do that from the start?</p></span></section>
+						<p class="citation">5. The act of writing a “don’ts” section for a style guide is a weird form of speculation that requires an agency to embody the mind of their “other”—some designer they deem to have less ability or worse taste than them. All the things they would never do are conjured up in order to prevent someone else from doing them. These value judgements keep a visual identity stuck in the time it was made, preventing it from growing as tastes change and missions evolve. No institution would aspire to such a <span id="quality"> of stagnation, so why should their “brands” be designed to do that from the start?</p></span></div>
 			</section>
 			<section>
 				<h3>We Don’t Cut Corners When it Comes to Quality</h3>
@@ -81,9 +82,9 @@
 			</section>
 			<section>
 				<h3>I’m lovin' it</h3>
-					<section class="citationbox">
+					<div class="citationbox">
 					<p class="citationparagraph">The alternative to a corporate, style-guide driven approach to branding is developing a visual language over time. This is a bottom-up vs. top-down approach, or what philosopher Gilbert Ryle describes as the difference between “knowing how” and “knowing that,” which Keller Easterling has used to explain a dispositional approach to design that unfolds over time<sup style="vertical-align: super;">6</sup>:</p>
-						<p class="citation">6. Keller Easterling, Extrastatecraft: The Power of Infrastructure Space, 2014.</p></section>
+						<p class="citation">6. Keller Easterling, Extrastatecraft: The Power of Infrastructure Space, 2014.</p></div>
 					<p class="bigtextitalic">Ryle once explained the difference between the two by using the example of a clown. The clown does not possess the correct answer to the question, “What is funny?” The clown’s antics are not a single reasoned executive order. His knowledge and experience unfold in relation to the situation, from encounter to encounter, circumstance to circumstance. He has well-rehearsed knowledge of how to do a pratfall, exaggerate his facial expressions, modulate his voice, or introduce any other gag from his bag of tricks. What is funny involves a set of choices contingent on the audience’s reactions, and the clown’s performance relies on “knowing how” rather than “knowing that.”</p>
 					<p class="normal">For Easterling, knowing how “does not describe a constant, but rather a changing set of actions from which one might assess agency, potentiality, or capacity.” This is the designer that has internalized the complex nuances of an institution and makes work appropriate for each situation, regardless of its relationship to what came before. Knowing that is the branding agency that sets rules for every design choice without any engagement in their execution, assuming it will remain constant forever.</p>
 					<p class="normal">Like clowns that know how to be funny, and mascots with personalities that evolve naturally over time, institutions should partner with independent designers, design studios, and build strong in-house teams. These long-term collaborations can replace large branding agencies, and develop truly adaptive, flexible visual identities that accurately reflect the necessary complexities of cultural institutions.</p>
