--- a/index.html
+++ b/index.html
@@ -90,9 +90,11 @@
 					<p class="normal">Like clowns that know how to be funny, and mascots with personalities that evolve naturally over time, institutions should partner with independent designers, design studios, and build strong in-house teams. These long-term collaborations can replace large branding agencies, and develop truly adaptive, flexible visual identities that accurately reflect the necessary complexities of cultural institutions.</p>
 			</section>
 		<!--Below is the link to the original article-->
-				<a href="https://walkerart.org/magazine/for-the-rest-of-your-life" id="originalarticle">Click here to read the original article &#8599;</a>
+				<p><a href="https://walkerart.org/magazine/for-the-rest-of-your-life" id="originalarticle">Click here to read the original article &#8599;</a></p>
 		</article>
 		<!--Footer of the webpage-->
-			<footer>Web design by Bee & Yaxuan. 2024</footer>
+			<footer>
+				<h1 class="footerheader"><span id="yellowtext">Web design by</span> <br>Bulgan and Yaxuan</h1> 
+			</footer>
 	</body>
 </html> 
