Edited the navigation bar menu's padding and put it into separate div

--- a/index.html
+++ b/index.html
@@ -17,11 +17,13 @@
 	</head>
 	<!--Below is the navigation bar links-->
 	<div class="flex-container">
+		<div class="links">
 		<a href="#time"><button>Rest</button></a>
 		<a href="#snoopy"><button>Snoopy</button></a>
 		<a href="#quality"><button>Quality</button></a>
 		<a href="#sample"><button>Sample</button></a>
 		<a href="#lovin"><button>Lovin</button></a>
+		</div>
 		<a href="#start" id="arrow">&#8593;</a>
 </div>
 	<header>
@@ -90,7 +92,7 @@
 					<p class="normal">Like clowns that know how to be funny, and mascots with personalities that evolve naturally over time, institutions should partner with independent designers, design studios, and build strong in-house teams. These long-term collaborations can replace large branding agencies, and develop truly adaptive, flexible visual identities that accurately reflect the necessary complexities of cultural institutions.</p>
 			</section>
 		<!--Below is the link to the original article-->
-				<p><a href="https://walkerart.org/magazine/for-the-rest-of-your-life" id="originalarticle">Click here to read the original article &#8599;</a></p>
+				<section><a href="https://walkerart.org/magazine/for-the-rest-of-your-life" id="originalarticle">Click here to read the original article &#8599;</a></section>
 		</article>
 		<!--Footer of the webpage-->
 			<footer>
