edited the footer section

--- a/index.html
+++ b/index.html
@@ -92,11 +92,12 @@
 					<p class="normal">Like clowns that know how to be funny, and mascots with personalities that evolve naturally over time, institutions should partner with independent designers, design studios, and build strong in-house teams. These long-term collaborations can replace large branding agencies, and develop truly adaptive, flexible visual identities that accurately reflect the necessary complexities of cultural institutions.</p>
 			</section>
 		<!--Below is the link to the original article-->
-				<section><a href="https://walkerart.org/magazine/for-the-rest-of-your-life" id="originalarticle">Click here to read the original article &#8599;</a></section>
+				<a href="https://walkerart.org/magazine/for-the-rest-of-your-life" id="originalarticle">Click here to read the original article &#8599;</a>
 		</article>
 		<!--Footer of the webpage-->
 			<footer>
-				<h1 class="footerheader"><span id="yellowtext">Web design by</span> <br>Bulgan and Yaxuan</h1> 
+				<h1 class="footerheader">Web design by</h1>
+				<h1 class="footerheader2">Bulgan and Yaxuan</h1>
 			</footer>
 	</body>
 </html> 
