changed the text on footer

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		</article>
 		<!--Footer of the webpage-->
 			<footer>
-				<h1 class="footerheader">Web design by</h1>
+				<h1 class="footerheader">Web design and coding by</h1>
 				<h1 class="footerheader2">Bulgan and Yaxuan</h1>
 			</footer>
 	</body>
